pageProfile: add logout button

--- a/assets/images/index.html
+++ b/assets/images/index.html
@@ -13,7 +13,16 @@
         <td><img src="icons/refresh.svg" alt="Refresh icon"></td>
         <td>
             Source: <a href="https://www.svgrepo.com/svg/54751/refresh">https://www.svgrepo.com/svg/54751/refresh</a>
-            Collection: Ui Kit Collection
+            Collection: <a href="https://www.svgrepo.com/collection/ui-kit-collection/">Ui Kit Collection</a>
+            License: CC0 License
+            Uploader: SVG Repo
+        </td>
+    </tr>
+    <tr>
+        <td><img src="icons/logout.svg" alt="Logout icon"></td>
+        <td>
+            Source: <a href="https://www.svgrepo.com/svg/135684/logout">https://www.svgrepo.com/svg/135684/logout</a>
+            Collection: <a href="https://www.svgrepo.com/collection/02-web-buttons/">02 Web Buttons</a>
             License: CC0 License
             Uploader: SVG Repo
         </td>
