pageMessages: add (dummy) media upload btn

--- a/assets/images/index.html
+++ b/assets/images/index.html
@@ -27,4 +27,22 @@
             Uploader: SVG Repo
         </td>
     </tr>
+    <tr>
+        <td><img src="icons/picture.svg" alt="Picture icon"></td>
+        <td>
+            Source: <a href="https://www.svgrepo.com/svg/43670/picture">https://www.svgrepo.com/svg/43670/picture</a>
+            Collection: <a href="https://www.svgrepo.com/collection/ui-interface-set/">Ui Interface Set</a>
+            License: CC0 License
+            Uploader: SVG Repo
+        </td>
+    </tr>
+    <tr>
+        <td><img src="icons/upload.svg" alt="Upload icon"></td>
+        <td>
+            Source: <a href="https://www.svgrepo.com/svg/54803/focus">https://www.svgrepo.com/svg/54803/focus</a>
+            Collection: <a href="https://www.svgrepo.com/collection/ui-kit-collection/">Ui Kit Collection</a>
+            License: CC0 License
+            Uploader: SVG Repo
+        </td>
+    </tr>
 </table>
