replace default unknown pfp

--- a/assets/images/index.html
+++ b/assets/images/index.html
@@ -45,4 +45,13 @@
             Uploader: SVG Repo
         </td>
     </tr>
+    <tr>
+        <td><img src="unknown.webp" alt="Default unknown profile picture"></td>
+        <td>
+            Source: <a href="https://www.flaticon.com/premium-icon/unknown_2179272">https://www.flaticon.com/premium-icon/unknown_2179272</a>
+            Related: <a href="https://www.flaticon.com/free-icons/anonymous">Anonymous icons created by Freepik - Flaticon</a>
+            License: Flaticon License
+            Uploader: Freepik
+        </td>
+    </tr>
 </table>
