Attributions: optimise for mobile

--- a/assets/images/index.html
+++ b/assets/images/index.html
@@ -1,59 +1,55 @@
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Attributions</title>
 
 <style>
-    img {
-        width: 10rem;
-        max-width: 20vw;
-    }
-    td {
-        white-space: pre-wrap;
-    }
+    img { width: 10rem; max-width: 20vw; }
+    td { padding: 1rem; }
 </style>
 
 <table>
     <tr>
         <td><img src="icons/refresh.svg" alt="Refresh icon"></td>
         <td>
-            Source: <a href="https://www.svgrepo.com/svg/54751/refresh">https://www.svgrepo.com/svg/54751/refresh</a>
-            Collection: <a href="https://www.svgrepo.com/collection/ui-kit-collection/">Ui Kit Collection</a>
-            License: CC0 License
-            Uploader: SVG Repo
+            Source: <a href="https://www.svgrepo.com/svg/54751/refresh">https://www.svgrepo.com/svg/54751/refresh</a><br>
+            Collection: <a href="https://www.svgrepo.com/collection/ui-kit-collection/">Ui Kit Collection</a><br>
+            License: CC0 License<br>
+            Uploader: SVG Repo<br>
         </td>
     </tr>
     <tr>
         <td><img src="icons/logout.svg" alt="Logout icon"></td>
         <td>
-            Source: <a href="https://www.svgrepo.com/svg/135684/logout">https://www.svgrepo.com/svg/135684/logout</a>
-            Collection: <a href="https://www.svgrepo.com/collection/02-web-buttons/">02 Web Buttons</a>
-            License: CC0 License
-            Uploader: SVG Repo
+            Source: <a href="https://www.svgrepo.com/svg/135684/logout">https://www.svgrepo.com/svg/135684/logout</a><br>
+            Collection: <a href="https://www.svgrepo.com/collection/02-web-buttons/">02 Web Buttons</a><br>
+            License: CC0 License<br>
+            Uploader: SVG Repo<br>
         </td>
     </tr>
     <tr>
         <td><img src="icons/picture.svg" alt="Picture icon"></td>
         <td>
-            Source: <a href="https://www.svgrepo.com/svg/43670/picture">https://www.svgrepo.com/svg/43670/picture</a>
-            Collection: <a href="https://www.svgrepo.com/collection/ui-interface-set/">Ui Interface Set</a>
-            License: CC0 License
-            Uploader: SVG Repo
+            Source: <a href="https://www.svgrepo.com/svg/43670/picture">https://www.svgrepo.com/svg/43670/picture</a><br>
+            Collection: <a href="https://www.svgrepo.com/collection/ui-interface-set/">Ui Interface Set</a><br>
+            License: CC0 License<br>
+            Uploader: SVG Repo<br>
         </td>
     </tr>
     <tr>
         <td><img src="icons/upload.svg" alt="Upload icon"></td>
         <td>
-            Source: <a href="https://www.svgrepo.com/svg/54803/focus">https://www.svgrepo.com/svg/54803/focus</a>
-            Collection: <a href="https://www.svgrepo.com/collection/ui-kit-collection/">Ui Kit Collection</a>
-            License: CC0 License
-            Uploader: SVG Repo
+            Source: <a href="https://www.svgrepo.com/svg/54803/focus">https://www.svgrepo.com/svg/54803/focus</a><br>
+            Collection: <a href="https://www.svgrepo.com/collection/ui-kit-collection/">Ui Kit Collection</a><br>
+            License: CC0 License<br>
+            Uploader: SVG Repo<br>
         </td>
     </tr>
     <tr>
         <td><img src="unknown.webp" alt="Default unknown profile picture"></td>
         <td>
-            Source: <a href="https://www.flaticon.com/premium-icon/unknown_2179272">https://www.flaticon.com/premium-icon/unknown_2179272</a>
-            Related: <a href="https://www.flaticon.com/free-icons/anonymous">Anonymous icons created by Freepik - Flaticon</a>
-            License: Flaticon License
-            Uploader: Freepik
+            Source: <a href="https://www.flaticon.com/premium-icon/unknown_2179272">https://www.flaticon.com/premium-icon/unknown_2179272</a><br>
+            Related: <a href="https://www.flaticon.com/free-icons/anonymous">Anonymous icons created by Freepik - Flaticon</a><br>
+            License: Flaticon License<br>
+            Uploader: Freepik<br>
         </td>
     </tr>
 </table>
