Attributions: add dates

--- a/assets/images/index.html
+++ b/assets/images/index.html
@@ -3,7 +3,7 @@
 
 <style>
     img { width: 10rem; max-width: 20vw; }
-    td { padding: 1rem; }
+    td { padding: 0.75rem; }
 </style>
 
 <table>
@@ -14,6 +14,7 @@
             Collection: <a href="https://www.svgrepo.com/collection/ui-kit-collection/">Ui Kit Collection</a><br>
             License: CC0 License<br>
             Uploader: SVG Repo<br>
+            Downloaded: 09/04/2022<br>
         </td>
     </tr>
     <tr>
@@ -23,6 +24,7 @@
             Collection: <a href="https://www.svgrepo.com/collection/02-web-buttons/">02 Web Buttons</a><br>
             License: CC0 License<br>
             Uploader: SVG Repo<br>
+            Downloaded: 10/04/2022<br>
         </td>
     </tr>
     <tr>
@@ -32,6 +34,7 @@
             Collection: <a href="https://www.svgrepo.com/collection/ui-interface-set/">Ui Interface Set</a><br>
             License: CC0 License<br>
             Uploader: SVG Repo<br>
+            Downloaded: 10/04/2022<br>
         </td>
     </tr>
     <tr>
@@ -41,6 +44,7 @@
             Collection: <a href="https://www.svgrepo.com/collection/ui-kit-collection/">Ui Kit Collection</a><br>
             License: CC0 License<br>
             Uploader: SVG Repo<br>
+            Downloaded: 10/04/2022<br>
         </td>
     </tr>
     <tr>
@@ -50,6 +54,7 @@
             Related: <a href="https://www.flaticon.com/free-icons/anonymous">Anonymous icons created by Freepik - Flaticon</a><br>
             License: Flaticon License<br>
             Uploader: Freepik<br>
+            Downloaded: 18/04/2022<br>
         </td>
     </tr>
 </table>
